--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Sukces - Neat Personal Resume CV vCard Template</title>
+<title>Julio Cesar Aguilar</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="assets/img/favicon.png">
@@ -49,8 +49,8 @@
             <li><a href="#start"><i class="pe-7s-home"></i><span>Start</span></a></li>
             <li><a href="#resume"><i class="pe-7s-ribbon"></i><span>Resume</span></a></li>
             <li><a href="#portfolio"><i class="pe-7s-monitor"></i><span>Portfolio</span></a></li>
-            <li><a href="#clients"><i class="pe-7s-comment"></i><span>Clients</span></a></li>
-            <li><a href="#latest-posts"><i class="pe-7s-copy-file"></i><span>Latest Posts</span></a></li>
+            <!--<li><a href="#clients"><i class="pe-7s-comment"></i><span>Clients</span></a></li>-->
+            <!--<li><a href="#latest-posts"><i class="pe-7s-copy-file"></i><span>Latest Posts</span></a></li>-->
             <li><a href="#contact"><i class="pe-7s-mail"></i><span>Contact</span></a></li>
         </ul>
         <span class="selector"></span>
@@ -79,8 +79,8 @@
         
         <div class="container container-custom v-center">
             <a href="#" class="btn-play btn-lg mb-30" data-toggle="video-modal" data-target="#modalVideo" data-video="https://www.youtube.com/embed/uVju5--RqtY"></a>
-            <h1 class="text-lg mb-0"><em>Hi! I’m</em> Mark Kosowski</h1>
-            <p class="lead text-muted">Experienced Front-End Developer</p>
+            <h1 class="text-lg mb-0"><em>Hi! I’m</em> Julio C. Aguilar</h1>
+            <p class="lead text-muted">Machine Learning Engineer & Mobile App Developer</p>
         </div>
 
     </section>
@@ -357,7 +357,7 @@
     </section>
 
     <!-- Section - Clients -->
-    <section id="clients" class="section bg-light">
+    <section id="clients" class="section bg-light" hidden>
 
         <div class="container container-custom">
             <h3 class="text-center mb-80">What clients say?</h3>
@@ -446,7 +446,7 @@
     </section>
 
     <!-- Section - Latest Posts -->
-    <section id="latest-posts" class="section">
+    <section id="latest-posts" class="section" hidden>
         <div class="container container-custom">
             <h3 class="text-center mb-80">Latest Posts</h3>
             <!-- Post / Item -->
