--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul class="nav nav-vertical">
             <li><a href="#start"><i class="pe-7s-home"></i><span>Start</span></a></li>
             <li><a href="#resume"><i class="pe-7s-ribbon"></i><span>Resume</span></a></li>
-            <li><a href="#portfolio"><i class="pe-7s-monitor"></i><span>Portfolio</span></a></li>
+            <li><a href="#portfolio"><i class="pe-7s-monitor"></i><span>Projects</span></a></li>
             <!--<li><a href="#clients"><i class="pe-7s-comment"></i><span>Clients</span></a></li>-->
             <!--<li><a href="#latest-posts"><i class="pe-7s-copy-file"></i><span>Latest Posts</span></a></li>-->
             <li><a href="#contact"><i class="pe-7s-mail"></i><span>Contact</span></a></li>
@@ -59,9 +59,9 @@
     <!-- Bottom -->
     <div class="bottom text-center">
         <ul class="nav-icons nav-sm">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/juliocesar.aguilarjimenez"><i class="fa fa-facebook"></i></a></li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://twitter.com/JuCeAJ"><i class="fa fa-twitter"></i></a></li>
+            <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/julio-cesar-aguilar-jimenez"><i class="fa fa-linkedin"></i></a></li>
         </ul>
     </div>
 
@@ -89,7 +89,7 @@
     <section id="resume" class="section">
         
         <div class="container container-custom">
-            <p class="lead text-muted mb-80">Aliquam nec lacus sollicitudin, ornare arcu at, tempor dolor. Quisque dapibus libero nec turpis molestie auctor. Quisque dapibus nisl enim, consequat blandit purus porttitor elementum. Maecenas placerat dapibus ullamcorper.</p>
+            <p class="lead text-muted mb-80" align="justify">Hello and welcome! My name is Julio C. Aguilar and and I enjoy challenges, especially those complicated ones that require complex models based on Deep Learning, Natural Language Processing or Image Recognition techniques. I have a master's degree and distinction in Artificial Intelligence plus several years of experience working as a developer. I am passionate about the technological world, videogames and sports, I hope you enjoy this page and if you have something in mind, please do not hesitate to contact me ;).</p>
 
             <div class="row masonry long-spaces">
                 <div class="masonry-sizer col-sm-6 col-xs-12"></div>
@@ -101,9 +101,9 @@
                             <div class="col-lg-6">
                                 <!-- Feature -->
                                 <div class="feature feature-2">
-                                    <span class="icon icon-primary"><i class="pe-7s-browser"></i></span>
+                                    <span class="icon icon-primary"><i class="pe-7s-vector"></i></span>
                                     <div class="feature-content">
-                                        <h4>Web App</h4>
+                                        <h4>Machine Learning</h4>
                                     </div>
                                 </div>
                                 <!-- Feature -->
@@ -117,16 +117,16 @@
                             <div class="col-lg-6">
                                 <!-- Feature -->
                                 <div class="feature feature-2">
-                                    <span class="icon icon-primary"><i class="pe-7s-monitor"></i></span>
+                                    <span class="icon icon-primary"><i class="pe-7s-look"></i></span>
                                     <div class="feature-content">
-                                        <h4>Webdesign</h4>
+                                        <h4>Computer Vision</h4>
                                     </div>
                                 </div>
                                 <!-- Feature -->
                                 <div class="feature feature-2">
-                                    <span class="icon icon-primary"><i class="pe-7s-chat"></i></span>
+                                    <span class="icon icon-primary"><i class="pe-7s-monitor"></i></span>
                                     <div class="feature-content">
-                                        <h4>Social Media</h4>
+                                        <h4>Web App</h4>
                                     </div>
                                 </div>
                             </div>
@@ -140,30 +140,37 @@
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="85"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80"></div>
                             </div>
-                            <h5>Adobe Photoshop / Sketch</h5>
+                            <h5>Python</h5>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="90"></div>
                             </div>
-                            <h5>HTML / CSS</h5>
+                            <h5>Swift</h5>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80"></div>
                             </div>
                             <h5>JavaScript</h5>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="60"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70"></div>
                             </div>
-                            <h5>AgnularJS</h5>
+                            <h5>C | C++ | C# | Objective C</h5>
+                        </div>
+                        <!-- Skill -->
+                        <div class="skill">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="75"></div>
+                            </div>
+                            <h5>Java</h5>
                         </div>
                     </div>
                 </div>
@@ -176,21 +183,21 @@
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="100"></div>
                             </div>
-                            <h5>Polish</h5>
+                            <h5>Spanish</h5>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="83"></div>
                             </div>
                             <h5>English</h5>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="60"></div>
+                                <div class="progress-bar" role="progressbar" aria-valuenow="55"></div>
                             </div>
-                            <h5>Spanish</h5>
+                            <h5>German</h5>
                         </div>
                     </div>
                 </div>
@@ -202,26 +209,41 @@
                             <!-- Event-->
                             <div class="timeline-event animated">
                                 <div class="content">
-                                    <span class="date">08.2010 - 09.2011</span>
-                                    <h4>Front-End Developer</h4>
-                                    <span class="caption">Envato, Sydney, Australia</span>
+                                    <span class="date">09/2017 - 09/2018</span>
+                                    <h4>MSc Artificial Intelligence</h4>
+                                    <span class="caption">University of Southampton, UK</span>
+                                </div>
+                            </div>
+                            <div class="timeline-event animated">
+                                <div class="content">
+                                    <span class="date">10/2017 - 09/2018</span>
+                                    <h4>Machine Learning Engineer</h4>
+                                    <span class="caption">UK Comany &amp; Kaggle , UK</span>
                                 </div>
                             </div>
                             <!-- Event-->
                             <div class="timeline-event animated">
                                 <div class="content">
-                                    <img src="assets/img/photos/london.jpg" alt="" class="img-rounded">
-                                    <span class="date">08.2010 - 09.2011</span>
-                                    <h4>Webdesigner &amp; Front End Developer</h4>
-                                    <span class="caption">Envato, Sydney, Australia</span>
+                                    <span class="date">11/2015 - 09/2017</span>
+                                    <!--<img src="assets/img/photos/london.jpg" alt="" class="img-rounded">-->
+                                    <h4>Full-Stack Mobile Developer</h4>
+                                    <span class="caption">CompuSoluciones, Guadalajara, Mexico</span>
                                 </div>
                             </div>
                             <!-- Event-->
                             <div class="timeline-event animated">
                                 <div class="content">
-                                    <span class="date">08.2010 - 09.2011</span>
-                                    <h4>Front-End Developer</h4>
-                                    <span class="caption">Envato, Sydney, Australia</span>
+                                    <span class="date">07/2014 - 08/2015</span>
+                                    <h4>Embedded System Developer</h4>
+                                    <span class="caption">Instituto Tecnologico de Morelia, Mexico</span>
+                                </div>
+                            </div>
+                            <!-- Event-->
+                            <div class="timeline-event animated">
+                                <div class="content">
+                                    <span class="date">07/2010 - 07/2015</span>
+                                    <h4>BS Electronics Engineering</h4>
+                                    <span class="caption">Instituto Tecnologico de Morelia, Mexico</span>
                                 </div>
                             </div>
                         </div>
@@ -235,22 +257,43 @@
                             <div class="col-sm-4">
                                 <!-- Feature -->
                                 <div class="feature feature-1 text-center">
-                                    <span class="icon icon-primary"><i class="pe-7s-bicycle"></i></span>
-                                    <h4>Sport</h4>
+                                    <span class="icon icon-primary"><i class="pe-7s-joy"></i></span>
+                                    <h4>Videogames</h4>
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <!-- Feature -->
                                 <div class="feature feature-1 text-center">
-                                    <span class="icon icon-primary"><i class="pe-7s-headphones"></i></span>
+                                    <span class="icon icon-primary"><i class="pe-7s-ball"></i></span>
+                                    <h4>Sports</h4>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <!-- Feature -->
+                                <div class="feature feature-1 text-center">
+                                    <span class="icon icon-primary"><i class="pe-7s-gym"></i></span>
+                                    <h4>Martial Arts</h4>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <!-- Feature -->
+                                <div class="feature feature-1 text-center">
+                                    <span class="icon icon-primary"><i class="pe-7s-film"></i></span>
+                                    <h4>Films</h4>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <!-- Feature -->
+                                <div class="feature feature-1 text-center">
+                                    <span class="icon icon-primary"><i class="pe-7s-music"></i></span>
                                     <h4>Music</h4>
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <!-- Feature -->
                                 <div class="feature feature-1 text-center">
-                                    <span class="icon icon-primary"><i class="pe-7s-rocket"></i></span>
-                                    <h4>Travelling</h4>
+                                    <span class="icon icon-primary"><i class="pe-7s-bookmarks"></i></span>
+                                    <h4>Books</h4>
                                 </div>
                             </div>
                         </div>
@@ -498,8 +541,7 @@
     <section id="contact" class="section min-fullheight">
 
         <!-- BG Image -->
-        <!--
-        <div id="google-map" data-latitude="40.758895" data-longitude="-73.985131" data-style="dream" class="bg-map"></div>
+        <div id="google-map" data-latitude="19.732705" data-longitude="-101.199620" data-style="dream" class="bg-map"></div>
 
         <div class="container container-custom">
             <div class="contact-box bg-primary dark animated" data-animation="fadeInDown" data-animation-delay="500">
@@ -512,23 +554,23 @@
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="feature feature-1">
-                                <div class="icon"><span class="ti-desktop"></span></div>
-                                <a href="#" class="h3 font-primary">example@sukces.com</a>
+                                <div class="icon"><span class="ti-email"></span></div>
+                                <h4 class="h4 font-primary">ajimenezjulio@gmail.com</h4>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="feature feature-1">
                                 <div class="icon"><span class="ti-mobile"></span></div>
-                                <a href="#" class="h3 font-primary"><small>+48</small> 123 561 672</a>
+                                <h4 href="#" class="h4 font-primary">+52 1 443 174 5249</h4>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="feature feature-1">
                                 <div class="icon"><span class="ti-location-arrow"></span></div>
                                 <address>
-                                    1111-A Nowhere Lane,<br>
-                                    Outta Sight, State 90378,<br>
-                                    USA
+                                    Agustin Lopez Nava 130,<br>
+                                    Morelia, Michoacan 58116,<br>
+                                    Mexico
                                 </address>
                             </div>
                         </div>
@@ -536,21 +578,16 @@
                     <hr class="sep-line">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h5 class="mt-5">Check my social media!</h5>
+                            <h5 class="mt-5">Take a look at my CV!</h5>
                         </div>
                         <div class="col-sm-6 text-right">
-                            <ul class="nav-icons">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            </ul>
+                            <a target="_blank" rel="noopener noreferrer" href="assets/documents/MyCV.pdf"><button class="btn btn-success"><i class="i-before ti-file"></i>Download CV</button>
                         </div>
                     </div>
                 </div>
                 <a href="#" class="contact-toggle"></a>
             </div>
         </div>
-    	-->
 
     </section>
 
@@ -635,7 +672,7 @@
 <script src="assets/js/core.js"></script>
 
 <!-- JS Google Map -->
-<script src="http://maps.google.com/maps/api/js"></script>
+<script src="http://maps.google.com/maps/api/js?key=AIzaSyA1D2osTJVd7ikvsKM_oz7_r7BVq4HEaSE"></script>
 
 </body>
 
