--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
 <script src="assets/js/core.js"></script>
 
 <!-- JS Google Map -->
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyA1D2osTJVd7ikvsKM_oz7_r7BVq4HEaSE"></script>
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyA1D2osTJVd7ikvsKM_oz7_r7BVq4HEaSE"></script>
 
 </body>
 
