alpha 1.1 - no projects html

--- a/index.html
+++ b/index.html
@@ -312,9 +312,10 @@
             <div class="tabs-wrapper">
                 <ul class="filter nav nav-tabs" data-filter-list="#works-list">
                     <li class="active"><a href="#" data-filter="*">All</a></li>
-                    <li><a href="#" data-filter=".webdesign">Webdesign</a></li>
-                    <li><a href="#" data-filter=".mobileApps">Mobile Apps</a></li>
-                    <li><a href="#" data-filter=".socialMedia">Social Media</a></li>
+                    <li><a href="#" data-filter=".machineLearning">Machine Learning</a></li>
+                    <li><a href="#" data-filter=".computerVision">Computer Vision</a></li>
+                    <li><a href="#" data-filter=".aI">AI</a></li>
+                    <li><a href="#" data-filter=".blockchain">Blockchain</a></li>
                 </ul>
                 <span class="selector"></span>
             </div>
@@ -324,73 +325,73 @@
         <div id="works-list" class="filter-list row masonry no-spaces">
             <div class="masonry-sizer col-md-4 col-sm-6 col-xs-12"></div>
             <!-- Image Box -->
-            <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="machineLearning masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work01.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/text.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Mountain View</h4>
-                            <span class="text-muted">Mobile Apps</span>
+                            <h4 class="mb-0">Text Classification</h4>
+                            <span class="text-muted">Machine Learning</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="computerVision masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work02.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/sizing.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">On the Beach</h4>
-                            <span class="text-muted">Webdesign</span>
+                            <h4 class="mb-0">Sizing a Room</h4>
+                            <span class="text-muted">Computer Vision</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="socialMedia masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="blockchain masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work03.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain2.jpeg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Cast Away</h4>
-                            <span class="text-muted">Social Media</span>
+                            <h4 class="mb-0">Blockchain</h4>
+                            <span class="text-muted">Blockchain</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="aI masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work04.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/adversarial.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">On the Desert</h4>
-                            <span class="text-muted">Webdesign</span>
+                            <h4 class="mb-0">Adversarial Game</h4>
+                            <span class="text-muted">AI</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="aI masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work05.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Apple MacBook</h4>
-                            <span class="text-muted">Webdesign</span>
+                            <h4 class="mb-0">Search Algorithms</h4>
+                            <span class="text-muted">AI</span>
                         </a>
                     </div>
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="aI masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work06.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/agent.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">The Tree</h4>
-                            <span class="text-muted">Mobile Apps</span>
+                            <h4 class="mb-0">Automated Negotiating Agent</h4>
+                            <span class="text-muted">AI</span>
                         </a>
                     </div>
                 </div>
@@ -541,7 +542,7 @@
     <section id="contact" class="section min-fullheight">
 
         <!-- BG Image -->
-        <div id="google-map" data-latitude="19.732705" data-longitude="-101.199620" data-style="dream" class="bg-map"></div>
+        <div id="google-map" data-latitude="19.732705" data-longitude="-101.199620" data-style="dream" class="bg-map dark-overlay"></div>
 
         <div class="container container-custom">
             <div class="contact-box bg-primary dark animated" data-animation="fadeInDown" data-animation-delay="500">
@@ -581,7 +582,11 @@
                             <h5 class="mt-5">Take a look at my CV!</h5>
                         </div>
                         <div class="col-sm-6 text-right">
-                            <a target="_blank" rel="noopener noreferrer" href="assets/documents/MyCV.pdf"><button class="btn btn-success"><i class="i-before ti-file"></i>Download CV</button>
+                            <ul class="nav-icons">
+                                    <a target="_blank" rel="noopener noreferrer" href="assets/documents/MyCV.pdf">
+                                        <button class="btn btn-success"><i class="i-before ti-file"></i>Download CV</button>
+                                    </a>
+                            </ul>
                         </div>
                     </div>
                 </div>
