--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/text.jpg" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
+                        <a href="project-text.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Text Classification</h4>
                             <span class="text-muted">Machine Learning</span>
                         </a>
@@ -341,8 +341,8 @@
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/sizing.jpg" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Sizing a Room</h4>
+                        <a href="project-sizing.html" data-toggle="ajax-modal">
+                            <h4 class="mb-0">Size up a Room</h4>
                             <span class="text-muted">Computer Vision</span>
                         </a>
                     </div>
@@ -353,7 +353,7 @@
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain2.jpeg" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
+                        <a href="project-blockchain.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Blockchain</h4>
                             <span class="text-muted">Blockchain</span>
                         </a>
@@ -365,7 +365,7 @@
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/adversarial.jpg" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
+                        <a href="project-adversarial.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Adversarial Game</h4>
                             <span class="text-muted">AI</span>
                         </a>
@@ -377,7 +377,7 @@
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain.jpg" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
+                        <a href="project-search.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Search Algorithms</h4>
                             <span class="text-muted">AI</span>
                         </a>
@@ -389,7 +389,7 @@
                 <div class="image-box">
                     <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/agent.jpg" alt=""></a></div>
                     <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
+                        <a href="project-negotiating_agent.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Automated Negotiating Agent</h4>
                             <span class="text-muted">AI</span>
                         </a>
