--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="bg-image zooming"><img src="assets/img/photos/developer_bg01.jpg" alt=""></div>
         
         <div class="container container-custom v-center">
-            <a href="#" class="btn-play btn-lg mb-30" data-toggle="video-modal" data-target="#modalVideo" data-video="https://www.youtube.com/embed/uVju5--RqtY"></a>
+            <!--<a href="#" class="btn-play btn-lg mb-30" data-toggle="video-modal" data-target="#modalVideo" data-video="https://www.youtube.com/embed/uVju5--RqtY"></a>-->
             <h1 class="text-lg mb-0"><em>Hi! I’m</em> Julio C. Aguilar</h1>
             <p class="lead text-muted">Machine Learning Engineer & Mobile App Developer</p>
         </div>
