--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <!-- Image Box -->
             <div class="machineLearning masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/text.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-text.html" data-toggle="ajax-modal"><img src="assets/img/works/text.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-text.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Text Classification</h4>
@@ -339,7 +339,7 @@
             <!-- Image Box -->
             <div class="computerVision masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/sizing.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-sizing.html" data-toggle="ajax-modal"><img src="assets/img/works/sizing.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-sizing.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Size up a Room</h4>
@@ -351,7 +351,7 @@
             <!-- Image Box -->
             <div class="blockchain masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain2.jpeg" alt=""></a></div>
+                    <div class="image"><a href="project-blockchain.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain2.jpeg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-blockchain.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Blockchain</h4>
@@ -363,7 +363,7 @@
             <!-- Image Box -->
             <div class="aI masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/adversarial.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-adversarial.html" data-toggle="ajax-modal"><img src="assets/img/works/adversarial.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-adversarial.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Adversarial Game</h4>
@@ -375,7 +375,7 @@
             <!-- Image Box -->
             <div class="aI masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-search.html" data-toggle="ajax-modal"><img src="assets/img/works/blockchain.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-search.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Search Algorithms</h4>
@@ -387,7 +387,7 @@
             <!-- Image Box -->
             <div class="aI masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/agent.jpg" alt=""></a></div>
+                    <div class="image"><a href="project-negotiating_agent.html" data-toggle="ajax-modal"><img src="assets/img/works/agent.jpg" alt=""></a></div>
                     <div class="hover">
                         <a href="project-negotiating_agent.html" data-toggle="ajax-modal">
                             <h4 class="mb-0">Automated Negotiating Agent</h4>
